--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ h1, h2 {
   background-color: #263d42;
   border-radius: 3px;
   padding: 10px 8px;
-  margin-bottom: 10px;
+  margin: 10px 0px;
+  display: inline-block;
   font-family: 'Zen Maru Gothic', sans-serif;
   font-weight: 700;
   transition: background-color 0.1s;
@@ -53,7 +54,7 @@ a:hover {
 
 li > a {
   color: #263d42;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .list-inline > li {
